# python-nmr-spectra-processing

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py  validate_package.py
.claude/: PATHS_SETUP.md  settings.json
examples/: README.md  basic_processing.py  calibration_example.py  logger_demo.py
output/: calibration_report.txt  summary.txt
src/nmr_spectra_processing/: __init__.py  version.py
src/nmr_spectra_processing/core/: __init__.py  alignment.py  baseline.py  calibration.py  noise.py  normalization.py  padding.py  phase.py  shifting.py
src/nmr_spectra_processing/reference/: __init__.py  signals.py
src/nmr_spectra_processing/utils/: __init__.py  logger.py  regions.py  selection.py
tests/: __init__.py  conftest.py  test_alignment.py  test_baseline.py  test_calibration.py  test_fixtures.py  test_logger.py  test_noise.py  test_normalization.py  test_padding.py  test_phase.py  test_shifting.py  test_signals.py  test_utils.py
