[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmr-spectra-processing"
version = "0.1.0"
description = "Process Fourier-transformed NMR spectra"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Andrés Bernal", email = "AndresFernando.BernalEscobar@murdoch.edu.au"},
    {name = "Julien Wist", email = "julien.wist@murdoch.edu.au"},
]
keywords = ["nmr", "spectroscopy", "metabolomics", "signal-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/phenological/python-nmr-spectra-processing"
Repository = "https://github.com/phenological/python-nmr-spectra-processing"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nmr_spectra_processing = ["reference/data/*.npy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nmr_spectra_processing --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
